--- a/TokenSearchField/Base.lproj/MainMenu.xib
+++ b/TokenSearchField/Base.lproj/MainMenu.xib
@@ -681,7 +681,7 @@
             </items>
         </menu>
         <window title="TokenSearchField" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+            <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="479" height="167"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="778"/>
